# tsundoku

./: .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  README.md  SPECIFICATION.md
.github/workflows/: release.yml
src/: config.rs  console.rs  cookies.rs  error.rs  lib.rs  main.rs  name_mapping.rs  name_scout.rs  translator.rs  utils.rs
src/scrapers/: kakuyomu.rs  mod.rs  pixiv.rs  syosetu.rs
