[package]
name = "tsundoku"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
futures = { version = "0.3.31", features = ["std"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["cookies", "json", "stream"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
toml = "0.9.10"
url = "2.5.7"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.24.0"
